# weregopher

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
bins/weregopher/: Cargo.toml
bins/weregopher/src/: live_smoke.rs  main.rs
bins/weregopher/tests/: fingerprint_cli.rs  transform_cli.rs
crates/weregopher-adapter-discord/: Cargo.toml
crates/weregopher-adapter-discord/src/: lib.rs
crates/weregopher-adapter-discord/tests/: smoke.rs
crates/weregopher-asar/: Cargo.toml
crates/weregopher-asar/src/: lib.rs
crates/weregopher-asar/tests/: archive.rs
crates/weregopher-discovery/: Cargo.toml
crates/weregopher-discovery/src/: correlation.rs  lib.rs  package_catalog.rs  uninstall.rs  verification.rs  windows_package_catalog.rs  windows_registry.rs
crates/weregopher-discovery/tests/: correlation.rs  known_locations.rs  package_catalog.rs  platform.rs  uninstall_registry.rs  verification.rs
crates/weregopher-discovery/tests/support/: mod.rs
crates/weregopher-domain/: Cargo.toml
crates/weregopher-domain/src/: build.rs  candidate.rs  certification.rs  certification_evidence.rs  certification_runner.rs  compatibility.rs  digest.rs  discovery.rs  execution.rs  execution_digest.rs  execution_target.rs  ids.rs  lib.rs  protocol.rs  security.rs  transformation.rs
crates/weregopher-domain/tests/: certification.rs  certification_runner.rs  compatibility.rs  contracts.rs  discovery.rs  execution.rs  execution_target.rs  protocol.rs  transformation.rs
crates/weregopher-domain/tests/fixtures/: certification-evidence-v1.golden.json  certification-profile-v1.golden.json  certification-runner-identity-v1.golden.json  execution-resolution-v2.golden.json  execution-target-v2.golden.json
crates/weregopher-fingerprint/: Cargo.toml
crates/weregopher-fingerprint/src/: acquisition.rs  builder.rs  classifier.rs  lib.rs  model.rs  observation.rs  options.rs  scanner.rs
crates/weregopher-fingerprint/src/acquisition/: windows.rs
crates/weregopher-fingerprint/src/observation/: windows.rs
crates/weregopher-fingerprint/tests/: fingerprint.rs  observation.rs  observation_platform.rs  tree_observation.rs  tree_observation_platform.rs
crates/weregopher-transform/: Cargo.toml
crates/weregopher-transform/src/: bundle.rs  certification_artifacts.rs  certification_policy.rs  certification_publication.rs  certification_runner_policy.rs  emission.rs  execution_authorization.rs  lib.rs  materialization.rs  planning.rs  snapshot.rs  source_map.rs  store.rs  supervision.rs
crates/weregopher-transform/src/snapshot/: windows.rs
crates/weregopher-transform/src/store/: windows.rs
crates/weregopher-transform/tests/: artifacts.rs  certification_artifacts.rs  certification_runner_policy.rs  emission.rs  execution_authorization.rs  materialization.rs  package_snapshot.rs  pipeline.rs  static_import_planning.rs  store.rs
crates/weregopher-windows/: Cargo.toml
crates/weregopher-windows/src/: job.rs  lib.rs  path.rs  process.rs
crates/weregopher-windows/tests/: identity.rs  job.rs  ordinal_case.rs  process.rs
docs/adr/: 0001-canonical-contract-authority.md  0002-initial-release-profile.md  0003-effective-security-posture.md  0004-full-width-windows-file-identity.md  0005-initial-candidate-artifact-identities.md  0006-fail-closed-compatibility-analysis-contract.md  0007-authority-nonexpanding-transform-rebinding-contracts.md  0008-non-authorizing-transform-artifact-verification.md  0009-non-authorizing-static-import-rewrite-planning.md  0010-deterministic-in-memory-transformed-source-emission.md  0011-canonical-bounded-static-match-evidence.md  0012-bounded-deterministic-source-map-v3-emission.md  0013-complete-deterministic-transform-artifact-bundles.md  0014-content-addressed-materialization-manifest.md  0015-windows-managed-content-addressed-publication.md  0016-bounded-windows-job-object-ownership.md  0017-atomic-windows-job-owned-process-launch.md  0018-bounded-package-tree-manifest-contract.md  0019-bounded-windows-package-tree-observation.md  0020-content-addressed-windows-package-snapshots.md  0021-authority-nonexpanding-execution-artifact-rebinding.md  0022-identity-bound-retained-executable-capabilities.md  0023-bounded-execution-target-and-resolution-contracts.md  0024-revocation-current-local-live-execution-authorization.md  0025-atomic-authorization-consumption-and-job-owned-launch.md  0026-execution-contract-v2-and-pre-authorized-launch-plans.md  0027-bounded-blocking-execution-supervision.md  0028-bounded-non-authorizing-certification-evidence.md  0029-canonical-certification-profiles.md  0030-bounded-certification-artifact-verification.md  0031-generation-aware-local-certification-policy.md  0032-atomic-local-certification-publication.md  0033-bounded-canonical-certification-runner-identity.md  0034-generation-aware-local-certification-runner-policy.md  README.md
docs/spec/: weregopher-electron-transformation-runtime-spec.md
schemas/: adapter-execution-authority.schema.json  adapter-transform-authority.schema.json  build-fingerprint.schema.json  call-context.schema.json  candidate-installation-evidence.schema.json  candidate-profile.schema.json  certification-class.schema.json  certification-evidence.schema.json  certification-profile.schema.json  certification-runner-identity.schema.json  compatibility-analysis.schema.json  effective-security-posture.schema.json  execution-resolution-evidence.schema.json  execution-target-contract.schema.json  frame-header.schema.json  generated-execution-overlay.schema.json  generated-transform-overlay.schema.json  package-tree-manifest.schema.json  protocol-limits.schema.json  publication-status.schema.json  trust-mode.schema.json  wire-value.schema.json
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: schema.rs
