[workspace]
resolver = "3"
members = [
  "crates/weregopher-discovery",
  "crates/weregopher-domain",
  "crates/weregopher-fingerprint",
  "crates/weregopher-windows",
  "xtask",
]
default-members = [
  "crates/weregopher-domain",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZeidHassan/weregopher"
authors = ["Weregopher contributors"]

[workspace.dependencies]
anyhow = "1"
hex = "0.4"
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
winreg = "0.56"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
