[workspace]
resolver = "3"
members = [
  "bins/weregopher",
  "crates/weregopher-discovery",
  "crates/weregopher-domain",
  "crates/weregopher-fingerprint",
  "crates/weregopher-transform",
  "crates/weregopher-windows",
  "xtask",
]
default-members = [
  "crates/weregopher-domain",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "MIT"
repository = "https://github.com/zeidalidiez/weregopher"
authors = ["Weregopher contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
libc = "0.2"
oxc_allocator = "=0.80.0"
oxc_ast = "=0.80.0"
oxc_parser = "=0.80.0"
oxc_span = "=0.80.0"
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2.5"
windows = { version = "0.62", features = [
  "ApplicationModel",
  "ApplicationModel_Core",
  "Management_Deployment",
  "Storage",
  "Storage_Search",
  "System",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
winreg = "0.56"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
