[package]
name = "xtask"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde_json.workspace = true
weregopher-domain = { version = "0.1.0", path = "../crates/weregopher-domain" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
