[package]
name = "weregopher"
description = "Weregopher developer and user command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
weregopher-adapter-discord = { version = "0.1.0", path = "../../crates/weregopher-adapter-discord" }
weregopher-asar = { version = "0.1.0", path = "../../crates/weregopher-asar" }
weregopher-domain = { version = "0.1.0", path = "../../crates/weregopher-domain" }
weregopher-fingerprint = { version = "0.1.0", path = "../../crates/weregopher-fingerprint" }
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
weregopher-windows = { version = "0.1.0", path = "../../crates/weregopher-windows" }
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
