[package]
name = "weregopher-adapter-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true