[package]
name = "weregopher-discovery"
description = "Read-only installed-application discovery for Weregopher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
weregopher-domain = { version = "0.1.0", path = "../weregopher-domain" }

[target.'cfg(windows)'.dependencies]
windows.workspace = true
winreg.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
