[package]
name = "weregopher-fingerprint"
description = "Deterministic package-manifest construction for Weregopher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir.workspace = true
weregopher-domain = { version = "0.1.0", path = "../weregopher-domain" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
weregopher-windows = { version = "0.1.0", path = "../weregopher-windows" }
windows-sys.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
