[package]
name = "weregopher-transform"
description = "Verified semantic-transform artifact handling for Weregopher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
weregopher-domain = { version = "0.1.0", path = "../weregopher-domain" }

[lints]
workspace = true
