[package]
name = "weregopher-transform"
description = "Verified semantic-transform artifact handling for Weregopher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
weregopher-domain = { version = "0.1.0", path = "../weregopher-domain" }

[lints]
workspace = true
